--- a/charts/gitlab/templates/cm-gitlab-init.yaml
+++ b/charts/gitlab/templates/cm-gitlab-init.yaml
@@ -187,3 +187,39 @@ data:
           until: r_group_user.status == 201
           loop: '{{ "{{" }} r_users.json {{ "}}" }}'
 {{- end }}
+        - name: Create Keycloak GitLab application
+          ansible.builtin.uri:
+            url: https://{{ $.Values.gitlab.host }}/api/v4/applications
+            method: POST
+            body_format: form-urlencoded
+            body:
+              name: keycloak
+              redirect_uri: https://{{ $.Values.gitlab.host }}/auth/realms/backstage/broker/GitLab/endpoint
+              scopes: api read_user read_repository write_repository sudo openid profile email
+              confidential: false
+            headers:
+              PRIVATE-TOKEN: '{{ "{{" }} root_token {{ "}}" }}'
+            validate_certs: false
+            status_code: [201]
+          register: r_keycloak_app
+          retries: 60
+          delay: 10
+          until: r_keycloak_app.status == 201
+        - name: Get Keycloak client credentials
+          ansible.builtin.set_fact:
+            r_keycloak_client_id: '{{ "{{" }} r_keycloak_app.json.application_id {{ "}}" }}'
+            r_keycloak_client_secret: '{{ "{{" }} r_keycloak_app.json.secret {{ "}}" }}'
+        - name: Create secret with keycloak client credentials
+          kubernetes.core.k8s:
+            state: present
+            definition:
+              kind: Secret
+              apiVersion: v1
+              metadata:
+                name: {{ $.Values.gitlab.applications.keycloak.secret }}
+                namespace: {{ $.Release.Namespace }}
+              stringData:
+                clientId: '{{ "{{" }} r_keycloak_client_id {{ "}}" }}'
+                clientSecret: '{{ "{{" }} r_keycloak_client_secret {{ "}}" }}'
+              type: Opaque
+          
