--- a/charts/gitlab/values.yaml
+++ b/charts/gitlab/values.yaml
@@ -36,6 +36,10 @@ gitlab:
           url: https://github.com/btison/rhdh-template-quarkus-simple.git
         - name: parasol-store-dev-template
           url: https://github.com/btison/pwe-parasol-store-dev-templates.git
+        - name: import-existing-app-template
+          url: https://github.com/redhat-pe-workshop/import-existing-app-template.git
+        - name: import-existing-app-template
+          url: https://github.com/redhat-pe-workshop/import-api-template.git
       users:
         - id: pe1
         - id: pe2
@@ -44,8 +48,17 @@ gitlab:
       users:
         - id: dev1
         - id: dev2
+    - name: global
+      repo:
+        - name: global-techdocs
+          url: https://github.com/redhat-pe-workshop/parasol-techdocs
+      users:
+        - id: pe1
+        - id: pe2
     - name: parasol
       repo:
+        - name: envelope-parasol-catalog
+          url: https://github.com/redhat-pe-workshop/envelope-parasol-catalog.git      
         - name: parasol-store
           url: https://github.com/btison/pew-parasol-store.git
           properties:
