--- a/charts/gitlab/values.yaml
+++ b/charts/gitlab/values.yaml
@@ -40,6 +40,8 @@ gitlab:
           url: https://github.com/redhat-pe-workshop/import-existing-app-template.git
         - name: import-existing-api-template
           url: https://github.com/redhat-pe-workshop/import-api-template.git
+        - name: rhdh-entities
+          url: https://github.com/redhat-pe-workshop/pe-workshop-entities.git
       users:
         - id: pe1
         - id: pe2
@@ -51,7 +53,7 @@ gitlab:
     - name: global
       repo:
         - name: global-techdocs
-          url: https://github.com/redhat-pe-workshop/parasol-techdocs
+          url: https://github.com/redhat-pe-workshop/global-techdocs.git
       users:
         - id: pe1
         - id: pe2
@@ -83,6 +85,16 @@ gitlab:
   templates:
     - group: rhdh
       project: template-quarkus-simple
+      branch: main
+      templates:
+        - template.yaml
+    - group: rhdh
+      project: import-existing-app-template
+      branch: main
+      templates:
+        - template.yaml
+    - group: rhdh
+      project: import-existing-api-template
       branch: main
       templates:
         - template.yaml
